# pythonistas

./: .gitignore  0001.ipynb  0002.ipynb  0003.ipynb  0004.ipynb  0005.ipynb  0006.ipynb  0007.ipynb  0008.ipynb  README.md  juliana_notebook.ipynb  marcela_desafio_3.py  petshop.py  pyproject.toml  todo.md
carlos/: __main__.py  script_do_carlos.py
carlos/cinema/: __init__.py  __main__.py  dados.py  funcoes.py
carlos/petshop/: v1.py  v2.py
cinema/: main.py
juliana/: cinemaju.py  juliana_notebook.ipynb  petju.py
leticia/: kim_cine1  leticia_0003.ipynb  leticia_petshop.ipynb  leticia_petshop.py
petshop/: v2.py
