[tool.poetry]
name = "pythonistas"
version = "0.1.0"
description = "Learning Python from zero to hero"
authors = ["Carlos Fernandes <carlos.vinicius.fernandes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
